# Desafio_FPF_Tech

./: CMakeLists.txt  DockerFile  Dockerfile  README.md
backend/: CMakeLists.txt  backend.cpp  backend.h
frontend/: CMakeLists.txt  gui.cpp  gui.h  main.cpp
lib/: CMakeLists.txt  lib_gentexts.c  lib_gentexts.h
